--- a/MasterFile.ipynb
+++ b/MasterFile.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "fd77ac4f",
+   "id": "776b2374",
    "metadata": {},
    "outputs": [
     {
@@ -100,7 +100,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "603fdddc",
+   "id": "1adb2ae0",
    "metadata": {
     "scrolled": true
    },
@@ -462,7 +462,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4968c558",
+   "id": "4935528e",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -470,7 +470,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f11d4c17",
+   "id": "73ae8bb5",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -478,7 +478,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "db190f1c",
+   "id": "72046b87",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -486,7 +486,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1c096094",
+   "id": "a62d1279",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -494,7 +494,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "22c214f6",
+   "id": "40ec8cce",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -502,7 +502,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "a4a8a921",
+   "id": "be977b3a",
    "metadata": {},
    "outputs": [
     {
@@ -1320,7 +1320,7 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "id": "3a6a013d",
+   "id": "b0d87834",
    "metadata": {},
    "outputs": [
     {
@@ -1431,7 +1431,7 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "id": "515e53c8",
+   "id": "655c94a8",
    "metadata": {},
    "outputs": [
     {
@@ -1589,7 +1589,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "3b6c437f",
+   "id": "236c1931",
    "metadata": {},
    "outputs": [
     {
@@ -1635,7 +1635,7 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "37a9986e",
+   "id": "8a6f0402",
    "metadata": {},
    "outputs": [
     {
@@ -1694,7 +1694,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "57da7df7",
+   "id": "766878ca",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1816,7 +1816,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e01398af",
+   "id": "c392f88c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1948,7 +1948,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5740f6c0",
+   "id": "02a76158",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2087,7 +2087,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4ffadc8b",
+   "id": "136677f6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2221,6 +2221,58 @@
     "\n",
     "# Process all files\n",
     "process_all_months(master_file_path, monthly_files, comparison_columns, output_file)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2c781005",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def find_updated_and_new_records(file_df, reference_df, month, source_type, comparison_columns):\n",
+    "    # Filter records based on the 'Source' column\n",
+    "    file_df = file_df[file_df['Source'] == source_type]\n",
+    "    reference_df = reference_df[reference_df['Source'] == source_type]\n",
+    "\n",
+    "    # Ensure Position ID exists\n",
+    "    if \"Position ID\" not in file_df.columns:\n",
+    "        raise KeyError(f\"'Position ID' not found in {source_type} data for {month}.\")\n",
+    "\n",
+    "    # Retrieve the list of columns for comparison from the dictionary\n",
+    "    cols_to_compare = comparison_columns[source_type]\n",
+    "\n",
+    "    # Identify updated and new records\n",
+    "    updated_records = []\n",
+    "    new_records = []\n",
+    "\n",
+    "    for _, row in file_df.iterrows():\n",
+    "        position_id = row[\"Position ID\"]\n",
+    "        ref_row = reference_df[reference_df[\"Position ID\"] == position_id]\n",
+    "\n",
+    "        if not ref_row.empty:\n",
+    "            # Check for changes in the comparison columns\n",
+    "            changes = []\n",
+    "            for col in cols_to_compare:\n",
+    "                if col in ref_row.columns and row[col] != ref_row[col].values[0]:\n",
+    "                    changes.append(col)\n",
+    "\n",
+    "            if changes:\n",
+    "                updated_row = row.to_dict()\n",
+    "                updated_row[\"Month Changed\"] = month\n",
+    "                updated_row[\"Cols Changed\"] = \"; \".join(changes)\n",
+    "                updated_records.append(updated_row)\n",
+    "        else:\n",
+    "            # Add new record\n",
+    "            new_row = row.to_dict()\n",
+    "            new_row[\"Month Added\"] = month\n",
+    "            new_records.append(new_row)\n",
+    "\n",
+    "    # Convert to DataFrame\n",
+    "    updated_df = pd.DataFrame(updated_records)\n",
+    "    new_df = pd.DataFrame(new_records)\n",
+    "\n",
+    "    return updated_df, new_df\n"
    ]
   }
  ],
