--- a/MasterFile.ipynb
+++ b/MasterFile.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "776b2374",
+   "id": "efec366c",
    "metadata": {},
    "outputs": [
     {
@@ -100,7 +100,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "1adb2ae0",
+   "id": "88672fae",
    "metadata": {
     "scrolled": true
    },
@@ -462,7 +462,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4935528e",
+   "id": "2e7def53",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -470,7 +470,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "73ae8bb5",
+   "id": "8b2ff237",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -478,7 +478,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "72046b87",
+   "id": "59b4980f",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -486,7 +486,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a62d1279",
+   "id": "fde2bea9",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -494,7 +494,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "40ec8cce",
+   "id": "063442b6",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -502,7 +502,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "be977b3a",
+   "id": "6ee96439",
    "metadata": {},
    "outputs": [
     {
@@ -1320,7 +1320,7 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "id": "b0d87834",
+   "id": "149fc18d",
    "metadata": {},
    "outputs": [
     {
@@ -1431,7 +1431,7 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "id": "655c94a8",
+   "id": "080c1d24",
    "metadata": {},
    "outputs": [
     {
@@ -1589,7 +1589,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "236c1931",
+   "id": "6b928900",
    "metadata": {},
    "outputs": [
     {
@@ -1635,7 +1635,7 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "8a6f0402",
+   "id": "f3b84b7e",
    "metadata": {},
    "outputs": [
     {
@@ -1694,7 +1694,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "766878ca",
+   "id": "2ef55835",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1816,7 +1816,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c392f88c",
+   "id": "ae2d5f51",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1948,7 +1948,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "02a76158",
+   "id": "257226b5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2087,7 +2087,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "136677f6",
+   "id": "069cfdbe",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2226,7 +2226,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2c781005",
+   "id": "ff311b9e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2273,6 +2273,36 @@
     "    new_df = pd.DataFrame(new_records)\n",
     "\n",
     "    return updated_df, new_df\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7822da5f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for month, (gha_file, open_pos_file) in monthly_files.items():\n",
+    "    # Load GHA and Open Position files for the month\n",
+    "    gha_df = pd.read_csv(gha_file)  # Using CSV\n",
+    "    open_pos_df = pd.read_csv(open_pos_file)\n",
+    "\n",
+    "    # Process GHA and Open Position files against the master\n",
+    "    updated_gha, new_gha = find_updated_and_new_records(\n",
+    "        gha_df, master_df, month, 'GHA', comparison_columns\n",
+    "    )\n",
+    "    updated_open, new_open = find_updated_and_new_records(\n",
+    "        open_pos_df, master_df, month, 'Open Position', comparison_columns\n",
+    "    )\n",
+    "\n",
+    "    # Append processed data to the final DataFrames\n",
+    "    final_gha_combined = pd.concat([final_gha_combined, updated_gha, new_gha], ignore_index=True)\n",
+    "    final_open_combined = pd.concat([final_open_combined, updated_open, new_open], ignore_index=True)\n",
+    "\n",
+    "    # Update master for the next iteration\n",
+    "    master_df = pd.concat([master_df, gha_df, open_pos_df], ignore_index=True).drop_duplicates(\n",
+    "        subset=[\"Position ID\"], keep=\"last\"\n",
+    "    )\n"
    ]
   }
  ],
