--- a/MasterFile.ipynb
+++ b/MasterFile.ipynb
@@ -2,6 +2,43 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "c8f7ed15",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "else:\n",
+    "    # Check if Employee ID exists in master but Position ID has changed\n",
+    "    if \"Employee ID\" in row and not master_df[master_df[\"Employee ID\"] == row[\"Employee ID\"]].empty:\n",
+    "        # Fetch the corresponding row in master where Employee ID matches\n",
+    "        master_row = master_df[master_df[\"Employee ID\"] == row[\"Employee ID\"]].iloc[0]\n",
+    "        \n",
+    "        # Check if Position ID has actually changed\n",
+    "        if master_row[\"Position ID\"] != row[\"Position ID\"]:\n",
+    "            updated_row = row.to_dict()\n",
+    "            updated_row[\"Month Changed\"] = month\n",
+    "            updated_row[\"Cols Changed\"] = \"Position ID\"\n",
+    "            updated_row[\"Source\"] = source_type\n",
+    "            updated_records.append(updated_row)\n",
+    "    else:\n",
+    "        # Handle cases where both Employee ID and Position ID are blank or unchanged\n",
+    "        if (\n",
+    "            \"Employee ID\" in row\n",
+    "            and row[\"Employee ID\"] == \"\"  # Current file has blank Employee ID\n",
+    "            and not master_df[(master_df[\"Position ID\"] == row[\"Position ID\"]) & (master_df[\"Employee ID\"] == \"\")].empty\n",
+    "        ):\n",
+    "            # Skip adding to updated_records because nothing has changed\n",
+    "            continue\n",
+    "\n",
+    "        # Add new record if no match found\n",
+    "        new_row = row.to_dict()\n",
+    "        new_row[\"Month Added\"] = month\n",
+    "        new_row[\"Source\"] = source_type\n",
+    "        new_records.append(new_row)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 44,
    "id": "efec366c",
    "metadata": {},
@@ -53,7 +90,7 @@
     "mar24_gha_df = pd.read_excel(r\"Input\\\\\" + \"Mar24_gha.xlsx\")\n",
     "mar24_open_df = pd.read_excel(r\"Input\\\\\" + \"Mar24_open.xlsx\")\n",
     "\n",
-    "# Strip spaces from column names to avoid mismatch\n",
+    "# Strip spaces from co`lumn names to avoid mismatch\n",
     "master_df.columns = master_df.columns.str.strip()\n",
     "feb24_gha_df.columns = feb24_gha_df.columns.str.strip()\n",
     "feb24_open_df.columns = feb24_open_df.columns.str.strip()\n",
