--- a/MasterFile.ipynb
+++ b/MasterFile.ipynb
@@ -3,7 +3,159 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c8f7ed15",
+   "id": "b3e83cff",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def process_monthly_file(file_df, master_df, month, source_type, updated_records, new_records):\n",
+    "    \"\"\"\n",
+    "    Process the monthly file and compare it with the master dataframe to identify changes or additions.\n",
+    "\n",
+    "    Args:\n",
+    "        file_df (DataFrame): The dataframe for the current month's data.\n",
+    "        master_df (DataFrame): The master dataframe containing previous records.\n",
+    "        month (str): The current month being processed (e.g., \"Feb 24\").\n",
+    "        source_type (str): The type of data source (e.g., \"GHA\", \"Open Position\").\n",
+    "        updated_records (list): List to store records that have been updated.\n",
+    "        new_records (list): List to store records that are new.\n",
+    "\n",
+    "    Returns:\n",
+    "        None: Updates `updated_records` and `new_records` in place.\n",
+    "    \"\"\"\n",
+    "    # Normalize blanks and NaN in both dataframes\n",
+    "    file_df = file_df.fillna(\"\").replace(\"nan\", \"\")\n",
+    "    master_df = master_df.fillna(\"\").replace(\"nan\", \"\")\n",
+    "\n",
+    "    for _, row in file_df.iterrows():\n",
+    "        if row[\"Position ID\"] in master_df[\"Position ID\"].values:\n",
+    "            # Fetch the corresponding row in the master file\n",
+    "            master_row = master_df[master_df[\"Position ID\"] == row[\"Position ID\"]].iloc[0]\n",
+    "\n",
+    "            # Identify columns that have changed\n",
+    "            cols_changed = []\n",
+    "            for col in file_df.columns:\n",
+    "                if col in master_df.columns and row[col] != master_row[col]:\n",
+    "                    cols_changed.append(col)\n",
+    "\n",
+    "            if cols_changed:\n",
+    "                # Record the updated row\n",
+    "                updated_row = row.to_dict()\n",
+    "                updated_row[\"Month Changed\"] = month\n",
+    "                updated_row[\"Cols Changed\"] = \", \".join(cols_changed)\n",
+    "                updated_row[\"Source\"] = source_type\n",
+    "                updated_records.append(updated_row)\n",
+    "        else:\n",
+    "            # Check if Employee ID exists in master but Position ID has changed\n",
+    "            if \"Employee ID\" in row and not master_df[master_df[\"Employee ID\"] == row[\"Employee ID\"]].empty:\n",
+    "                # Fetch the corresponding row in master where Employee ID matches\n",
+    "                master_row = master_df[master_df[\"Employee ID\"] == row[\"Employee ID\"]].iloc[0]\n",
+    "\n",
+    "                # Check if Position ID has actually changed\n",
+    "                if master_row[\"Position ID\"] != row[\"Position ID\"]:\n",
+    "                    updated_row = row.to_dict()\n",
+    "                    updated_row[\"Month Changed\"] = month\n",
+    "                    updated_row[\"Cols Changed\"] = \"Position ID\"\n",
+    "                    updated_row[\"Source\"] = source_type\n",
+    "                    updated_records.append(updated_row)\n",
+    "            else:\n",
+    "                # Handle cases where both Employee ID and Position ID are blank or unchanged\n",
+    "                if (\n",
+    "                    \"Employee ID\" in row\n",
+    "                    and row[\"Employee ID\"] == \"\"  # Current file has blank Employee ID\n",
+    "                    and not master_df[(master_df[\"Position ID\"] == row[\"Position ID\"]) & (master_df[\"Employee ID\"] == \"\")].empty\n",
+    "                ):\n",
+    "                    # Skip adding to updated_records because nothing has changed\n",
+    "                    continue\n",
+    "\n",
+    "                # Add new record if no match found\n",
+    "                new_row = row.to_dict()\n",
+    "                new_row[\"Month Added\"] = month\n",
+    "                new_row[\"Source\"] = source_type\n",
+    "                new_records.append(new_row)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "af003380",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def file_function_and_new_records(file_df, master_df, month, source_type):\n",
+    "    \"\"\"\n",
+    "    Process the monthly file and compare it with the master dataframe to identify changes or additions.\n",
+    "\n",
+    "    Args:\n",
+    "        file_df (DataFrame): The dataframe for the current month's data.\n",
+    "        master_df (DataFrame): The master dataframe containing previous records.\n",
+    "        month (str): The current month being processed (e.g., \"Feb 24\").\n",
+    "        source_type (str): The type of data source (e.g., \"GHA\", \"Open Position\").\n",
+    "\n",
+    "    Returns:\n",
+    "        updated_records (list): List of records that have been updated.\n",
+    "        new_records (list): List of records that are new.\n",
+    "    \"\"\"\n",
+    "    updated_records = []\n",
+    "    new_records = []\n",
+    "\n",
+    "    # Normalize blanks and NaN in both dataframes\n",
+    "    file_df = file_df.fillna(\"\").replace(\"nan\", \"\")\n",
+    "    master_df = master_df.fillna(\"\").replace(\"nan\", \"\")\n",
+    "\n",
+    "    for _, row in file_df.iterrows():\n",
+    "        if row[\"Position ID\"] in master_df[\"Position ID\"].values:\n",
+    "            # Fetch the corresponding row in the master file\n",
+    "            master_row = master_df[master_df[\"Position ID\"] == row[\"Position ID\"]].iloc[0]\n",
+    "\n",
+    "            # Identify columns that have changed\n",
+    "            cols_changed = []\n",
+    "            for col in file_df.columns:\n",
+    "                if col in master_df.columns and row[col] != master_row[col]:\n",
+    "                    cols_changed.append(col)\n",
+    "\n",
+    "            if cols_changed:\n",
+    "                # Record the updated row\n",
+    "                updated_row = row.to_dict()\n",
+    "                updated_row[\"Month Changed\"] = month\n",
+    "                updated_row[\"Cols Changed\"] = \", \".join(cols_changed)\n",
+    "                updated_row[\"Source\"] = source_type\n",
+    "                updated_records.append(updated_row)\n",
+    "        else:\n",
+    "            # Check if Employee ID exists in master but Position ID has changed\n",
+    "            if \"Employee ID\" in row and not master_df[master_df[\"Employee ID\"] == row[\"Employee ID\"]].empty:\n",
+    "                # Fetch the corresponding row in master where Employee ID matches\n",
+    "                master_row = master_df[master_df[\"Employee ID\"] == row[\"Employee ID\"]].iloc[0]\n",
+    "\n",
+    "                # Check if Position ID has actually changed\n",
+    "                if master_row[\"Position ID\"] != row[\"Position ID\"]:\n",
+    "                    updated_row = row.to_dict()\n",
+    "                    updated_row[\"Month Changed\"] = month\n",
+    "                    updated_row[\"Cols Changed\"] = \"Position ID\"\n",
+    "                    updated_row[\"Source\"] = source_type\n",
+    "                    updated_records.append(updated_row)\n",
+    "            else:\n",
+    "                # Handle cases where both Employee ID and Position ID are blank or unchanged\n",
+    "                if (\n",
+    "                    \"Employee ID\" in row\n",
+    "                    and row[\"Employee ID\"] == \"\"  # Current file has blank Employee ID\n",
+    "                    and not master_df[(master_df[\"Position ID\"] == row[\"Position ID\"]) & (master_df[\"Employee ID\"] == \"\")].empty\n",
+    "                ):\n",
+    "                    # Skip adding to updated_records because nothing has changed\n",
+    "                    continue\n",
+    "\n",
+    "                # Add new record if no match found\n",
+    "                new_row = row.to_dict()\n",
+    "                new_row[\"Month Added\"] = month\n",
+    "                new_row[\"Source\"] = source_type\n",
+    "                new_records.append(new_row)\n",
+    "\n",
+    "    return updated_records, new_records\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ee65e0ca",
    "metadata": {},
    "outputs": [],
    "source": [
