--- a/MasterFile.ipynb
+++ b/MasterFile.ipynb
@@ -3,7 +3,136 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b3e83cff",
+   "id": "9172357d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import os\n",
+    "\n",
+    "def preprocess_file(file_df):\n",
+    "    \"\"\"\n",
+    "    Preprocess the file to standardize column names and formats.\n",
+    "    \"\"\"\n",
+    "    # Standardize column names\n",
+    "    file_df.columns = file_df.columns.str.strip().str.replace(\"Position Number\", \"Position ID\")\n",
+    "    \n",
+    "    # Normalize Position ID and Employee ID (remove extra decimals/zeros)\n",
+    "    if \"Position ID\" in file_df.columns:\n",
+    "        file_df[\"Position ID\"] = file_df[\"Position ID\"].astype(str).str.split('.').str[0]\n",
+    "    if \"Employee ID\" in file_df.columns:\n",
+    "        file_df[\"Employee ID\"] = file_df[\"Employee ID\"].astype(str).str.split('.').str[0]\n",
+    "    \n",
+    "    return file_df\n",
+    "\n",
+    "def find_new_records(file_df, master_df, month, source):\n",
+    "    \"\"\"\n",
+    "    Find new records in the current month file compared to master_df.\n",
+    "    \"\"\"\n",
+    "    # Add missing columns to match master_df\n",
+    "    for col in master_df.columns:\n",
+    "        if col not in file_df.columns:\n",
+    "            file_df[col] = \"\"\n",
+    "    \n",
+    "    # Identify new records\n",
+    "    new_records = file_df[~file_df[\"Position ID\"].isin(master_df[\"Position ID\"])]\n",
+    "    new_records[\"Month Added\"] = month\n",
+    "    new_records[\"Source\"] = source\n",
+    "    \n",
+    "    return new_records\n",
+    "\n",
+    "def find_changes(current_df, next_df, cols_to_check, month, source):\n",
+    "    \"\"\"\n",
+    "    Find changes between current and next month files for the specified columns.\n",
+    "    \"\"\"\n",
+    "    changes = []\n",
+    "\n",
+    "    # Iterate through current month's records\n",
+    "    for _, row in current_df.iterrows():\n",
+    "        position_id = row[\"Position ID\"]\n",
+    "        employee_id = row.get(\"Employee ID\", \"\")\n",
+    "        \n",
+    "        # Find matching row in the next month\n",
+    "        next_row = next_df[next_df[\"Position ID\"] == position_id]\n",
+    "        if not next_row.empty:\n",
+    "            next_row = next_row.iloc[0]\n",
+    "            cols_changed = []\n",
+    "            \n",
+    "            # Check for changes in Employee ID (if applicable)\n",
+    "            if \"Employee ID\" in row and row[\"Employee ID\"] != next_row.get(\"Employee ID\", \"\"):\n",
+    "                cols_changed.append(\"Employee ID\")\n",
+    "            \n",
+    "            # Check for changes in the specified columns\n",
+    "            for col in cols_to_check:\n",
+    "                if row[col] != next_row[col]:\n",
+    "                    cols_changed.append(col)\n",
+    "            \n",
+    "            if cols_changed:\n",
+    "                change_record = row.to_dict()\n",
+    "                change_record[\"Month Changed\"] = month\n",
+    "                change_record[\"Cols Changed\"] = \", \".join(cols_changed)\n",
+    "                change_record[\"Source\"] = source\n",
+    "                changes.append(change_record)\n",
+    "\n",
+    "    return pd.DataFrame(changes)\n",
+    "\n",
+    "def process_mom_files(master_df, monthly_files, cols_to_check_gha, cols_to_check_open_pos):\n",
+    "    \"\"\"\n",
+    "    Process all MoM files to identify new and changed records.\n",
+    "    \"\"\"\n",
+    "    new_df = pd.DataFrame(columns=master_df.columns.tolist() + [\"Month Added\", \"Source\"])\n",
+    "    changes_df = pd.DataFrame(columns=master_df.columns.tolist() + [\"Month Changed\", \"Source\", \"Cols Changed\"])\n",
+    "\n",
+    "    for i, (month, (gha_file, open_pos_file)) in enumerate(monthly_files.items()):\n",
+    "        # Load GHA and Open Position files\n",
+    "        gha_df = preprocess_file(pd.read_csv(gha_file))\n",
+    "        open_pos_df = preprocess_file(pd.read_csv(open_pos_file))\n",
+    "\n",
+    "        # Get next month's files (if available)\n",
+    "        if i + 1 < len(monthly_files):\n",
+    "            next_month = list(monthly_files.keys())[i + 1]\n",
+    "            next_gha_file, next_open_pos_file = monthly_files[next_month]\n",
+    "            next_gha_df = preprocess_file(pd.read_csv(next_gha_file))\n",
+    "            next_open_pos_df = preprocess_file(pd.read_csv(next_open_pos_file))\n",
+    "        else:\n",
+    "            next_gha_df, next_open_pos_df = pd.DataFrame(), pd.DataFrame()\n",
+    "\n",
+    "        # Find new records for GHA and Open Positions\n",
+    "        new_df = pd.concat([new_df, find_new_records(gha_df, master_df, month, \"GHA\")], ignore_index=True)\n",
+    "        new_df = pd.concat([new_df, find_new_records(open_pos_df, master_df, month, \"Open Positions\")], ignore_index=True)\n",
+    "\n",
+    "        # Find changes for GHA\n",
+    "        if not next_gha_df.empty:\n",
+    "            changes_df = pd.concat([changes_df, find_changes(gha_df, next_gha_df, cols_to_check_gha, next_month, \"GHA\")], ignore_index=True)\n",
+    "\n",
+    "        # Find changes for Open Positions\n",
+    "        if not next_open_pos_df.empty:\n",
+    "            changes_df = pd.concat([changes_df, find_changes(open_pos_df, next_open_pos_df, cols_to_check_open_pos, next_month, \"Open Positions\")], ignore_index=True)\n",
+    "\n",
+    "    return new_df, changes_df\n",
+    "\n",
+    "# Example usage\n",
+    "master_df = pd.read_csv(\"master_file.csv\")\n",
+    "monthly_files = {\n",
+    "    \"Jan 24\": (\"gha_jan.csv\", \"open_pos_jan.csv\"),\n",
+    "    \"Feb 24\": (\"gha_feb.csv\", \"open_pos_feb.csv\"),\n",
+    "    # Add other months as needed\n",
+    "}\n",
+    "cols_to_check_gha = [\"Col1\", \"Col2\", \"Col3\"]  # Replace with actual column names\n",
+    "cols_to_check_open_pos = [\"ColA\", \"ColB\"]  # Replace with actual column names\n",
+    "\n",
+    "new_df, changes_df = process_mom_files(master_df, monthly_files, cols_to_check_gha, cols_to_check_open_pos)\n",
+    "\n",
+    "# Save results\n",
+    "new_df.to_csv(\"new_records.csv\", index=False)\n",
+    "changes_df.to_csv(\"changed_records.csv\", index=False)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "899fcbdf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +206,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "af003380",
+   "id": "2d18fba9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -155,7 +284,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ee65e0ca",
+   "id": "e2a2d5e9",
    "metadata": {},
    "outputs": [],
    "source": [
