--- a/MasterFile.ipynb
+++ b/MasterFile.ipynb
@@ -3,136 +3,146 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9172357d",
+   "id": "877cc95d",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import numpy as np\n",
-    "import os\n",
     "\n",
-    "def preprocess_file(file_df):\n",
+    "def standardize_ids(df):\n",
     "    \"\"\"\n",
-    "    Preprocess the file to standardize column names and formats.\n",
+    "    Standardize 'Position ID' and 'Employee ID' columns.\n",
+    "    Removes extra decimal points, leading/trailing spaces, \n",
+    "    and converts IDs to string format with uniform length.\n",
     "    \"\"\"\n",
-    "    # Standardize column names\n",
-    "    file_df.columns = file_df.columns.str.strip().str.replace(\"Position Number\", \"Position ID\")\n",
-    "    \n",
-    "    # Normalize Position ID and Employee ID (remove extra decimals/zeros)\n",
-    "    if \"Position ID\" in file_df.columns:\n",
-    "        file_df[\"Position ID\"] = file_df[\"Position ID\"].astype(str).str.split('.').str[0]\n",
-    "    if \"Employee ID\" in file_df.columns:\n",
-    "        file_df[\"Employee ID\"] = file_df[\"Employee ID\"].astype(str).str.split('.').str[0]\n",
-    "    \n",
-    "    return file_df\n",
+    "    if \"Position ID\" in df.columns:\n",
+    "        df[\"Position ID\"] = df[\"Position ID\"].astype(str).str.split('.').str[0].str.strip()\n",
+    "    if \"Employee ID\" in df.columns:\n",
+    "        df[\"Employee ID\"] = df[\"Employee ID\"].astype(str).str.split('.').str[0].str.strip()\n",
+    "    return df\n",
     "\n",
     "def find_new_records(file_df, master_df, month, source):\n",
     "    \"\"\"\n",
-    "    Find new records in the current month file compared to master_df.\n",
+    "    Find new records in the current month's file compared to the master dataframe.\n",
     "    \"\"\"\n",
-    "    # Add missing columns to match master_df\n",
+    "    # Standardize IDs for comparison\n",
+    "    file_df = standardize_ids(file_df)\n",
+    "    master_df = standardize_ids(master_df)\n",
+    "\n",
+    "    # Add missing columns to file_df to match master_df\n",
     "    for col in master_df.columns:\n",
     "        if col not in file_df.columns:\n",
     "            file_df[col] = \"\"\n",
-    "    \n",
-    "    # Identify new records\n",
+    "\n",
+    "    # Drop columns not in master_df\n",
+    "    file_df = file_df[master_df.columns]\n",
+    "\n",
+    "    # Identify new records (not in master_df)\n",
     "    new_records = file_df[~file_df[\"Position ID\"].isin(master_df[\"Position ID\"])]\n",
     "    new_records[\"Month Added\"] = month\n",
     "    new_records[\"Source\"] = source\n",
-    "    \n",
+    "\n",
+    "    # Ensure new_records matches the structure of new_df\n",
+    "    new_records = new_records.reindex(columns=master_df.columns.tolist() + [\"Month Added\", \"Source\"], fill_value=\"\")\n",
+    "\n",
     "    return new_records\n",
     "\n",
-    "def find_changes(current_df, next_df, cols_to_check, month, source):\n",
+    "def find_changed_records(current_df, next_df, cols_to_check, month, source):\n",
     "    \"\"\"\n",
-    "    Find changes between current and next month files for the specified columns.\n",
+    "    Find records with changes in the next month's file compared to the current month's file.\n",
     "    \"\"\"\n",
-    "    changes = []\n",
+    "    # Standardize IDs for comparison\n",
+    "    current_df = standardize_ids(current_df)\n",
+    "    next_df = standardize_ids(next_df)\n",
     "\n",
-    "    # Iterate through current month's records\n",
-    "    for _, row in current_df.iterrows():\n",
-    "        position_id = row[\"Position ID\"]\n",
-    "        employee_id = row.get(\"Employee ID\", \"\")\n",
-    "        \n",
-    "        # Find matching row in the next month\n",
-    "        next_row = next_df[next_df[\"Position ID\"] == position_id]\n",
-    "        if not next_row.empty:\n",
-    "            next_row = next_row.iloc[0]\n",
-    "            cols_changed = []\n",
-    "            \n",
-    "            # Check for changes in Employee ID (if applicable)\n",
-    "            if \"Employee ID\" in row and row[\"Employee ID\"] != next_row.get(\"Employee ID\", \"\"):\n",
-    "                cols_changed.append(\"Employee ID\")\n",
-    "            \n",
-    "            # Check for changes in the specified columns\n",
-    "            for col in cols_to_check:\n",
-    "                if row[col] != next_row[col]:\n",
-    "                    cols_changed.append(col)\n",
-    "            \n",
-    "            if cols_changed:\n",
-    "                change_record = row.to_dict()\n",
-    "                change_record[\"Month Changed\"] = month\n",
-    "                change_record[\"Cols Changed\"] = \", \".join(cols_changed)\n",
-    "                change_record[\"Source\"] = source\n",
-    "                changes.append(change_record)\n",
+    "    # Merge both dataframes on 'Position ID' and 'Employee ID' for comparison\n",
+    "    merged = pd.merge(current_df, next_df, on=[\"Position ID\", \"Employee ID\"], suffixes=(\"_current\", \"_next\"), how=\"inner\")\n",
     "\n",
-    "    return pd.DataFrame(changes)\n",
+    "    changed_records = []\n",
+    "    for _, row in merged.iterrows():\n",
+    "        changed_cols = [\n",
+    "            col for col in cols_to_check\n",
+    "            if row[f\"{col}_current\"] != row[f\"{col}_next\"]\n",
+    "        ]\n",
+    "        if changed_cols:\n",
+    "            updated_row = row.to_dict()\n",
+    "            updated_row[\"Month Changed\"] = month\n",
+    "            updated_row[\"Source\"] = source\n",
+    "            updated_row[\"Cols Changed\"] = \", \".join(changed_cols)\n",
+    "            changed_records.append(updated_row)\n",
     "\n",
-    "def process_mom_files(master_df, monthly_files, cols_to_check_gha, cols_to_check_open_pos):\n",
+    "    # Convert changed records to a DataFrame\n",
+    "    if changed_records:\n",
+    "        changes_df = pd.DataFrame(changed_records)\n",
+    "        changes_df = changes_df.reindex(columns=current_df.columns.tolist() + [\"Month Changed\", \"Source\", \"Cols Changed\"], fill_value=\"\")\n",
+    "        return changes_df\n",
+    "    else:\n",
+    "        return pd.DataFrame(columns=current_df.columns.tolist() + [\"Month Changed\", \"Source\", \"Cols Changed\"])\n",
+    "\n",
+    "def process_monthly_files(master_df, monthly_files, cols_to_check_gha, cols_to_check_open_pos):\n",
     "    \"\"\"\n",
-    "    Process all MoM files to identify new and changed records.\n",
+    "    Process monthly files to find new and changed records.\n",
     "    \"\"\"\n",
     "    new_df = pd.DataFrame(columns=master_df.columns.tolist() + [\"Month Added\", \"Source\"])\n",
     "    changes_df = pd.DataFrame(columns=master_df.columns.tolist() + [\"Month Changed\", \"Source\", \"Cols Changed\"])\n",
     "\n",
-    "    for i, (month, (gha_file, open_pos_file)) in enumerate(monthly_files.items()):\n",
-    "        # Load GHA and Open Position files\n",
-    "        gha_df = preprocess_file(pd.read_csv(gha_file))\n",
-    "        open_pos_df = preprocess_file(pd.read_csv(open_pos_file))\n",
+    "    for i in range(len(monthly_files) - 1):\n",
+    "        current_month, current_file = monthly_files[i]\n",
+    "        next_month, next_file = monthly_files[i + 1]\n",
     "\n",
-    "        # Get next month's files (if available)\n",
-    "        if i + 1 < len(monthly_files):\n",
-    "            next_month = list(monthly_files.keys())[i + 1]\n",
-    "            next_gha_file, next_open_pos_file = monthly_files[next_month]\n",
-    "            next_gha_df = preprocess_file(pd.read_csv(next_gha_file))\n",
-    "            next_open_pos_df = preprocess_file(pd.read_csv(next_open_pos_file))\n",
-    "        else:\n",
-    "            next_gha_df, next_open_pos_df = pd.DataFrame(), pd.DataFrame()\n",
+    "        # Process GHA files\n",
+    "        if \"gha\" in current_file.lower():\n",
+    "            current_df = pd.read_excel(current_file)\n",
+    "            next_df = pd.read_excel(next_file)\n",
     "\n",
-    "        # Find new records for GHA and Open Positions\n",
-    "        new_df = pd.concat([new_df, find_new_records(gha_df, master_df, month, \"GHA\")], ignore_index=True)\n",
-    "        new_df = pd.concat([new_df, find_new_records(open_pos_df, master_df, month, \"Open Positions\")], ignore_index=True)\n",
+    "            # Find new records\n",
+    "            new_df = pd.concat([new_df, find_new_records(current_df, master_df, current_month, \"GHA\")], ignore_index=True)\n",
     "\n",
-    "        # Find changes for GHA\n",
-    "        if not next_gha_df.empty:\n",
-    "            changes_df = pd.concat([changes_df, find_changes(gha_df, next_gha_df, cols_to_check_gha, next_month, \"GHA\")], ignore_index=True)\n",
+    "            # Find changed records\n",
+    "            changes_df = pd.concat([changes_df, find_changed_records(current_df, next_df, cols_to_check_gha, next_month, \"GHA\")], ignore_index=True)\n",
     "\n",
-    "        # Find changes for Open Positions\n",
-    "        if not next_open_pos_df.empty:\n",
-    "            changes_df = pd.concat([changes_df, find_changes(open_pos_df, next_open_pos_df, cols_to_check_open_pos, next_month, \"Open Positions\")], ignore_index=True)\n",
+    "        # Process Open Position files\n",
+    "        if \"open position\" in current_file.lower():\n",
+    "            current_df = pd.read_excel(current_file)\n",
+    "            next_df = pd.read_excel(next_file)\n",
+    "\n",
+    "            # Find new records\n",
+    "            new_df = pd.concat([new_df, find_new_records(current_df, master_df, current_month, \"Open Position\")], ignore_index=True)\n",
+    "\n",
+    "            # Find changed records\n",
+    "            changes_df = pd.concat([changes_df, find_changed_records(current_df, next_df, cols_to_check_open_pos, next_month, \"Open Position\")], ignore_index=True)\n",
     "\n",
     "    return new_df, changes_df\n",
     "\n",
-    "# Example usage\n",
-    "master_df = pd.read_csv(\"master_file.csv\")\n",
-    "monthly_files = {\n",
-    "    \"Jan 24\": (\"gha_jan.csv\", \"open_pos_jan.csv\"),\n",
-    "    \"Feb 24\": (\"gha_feb.csv\", \"open_pos_feb.csv\"),\n",
-    "    # Add other months as needed\n",
-    "}\n",
-    "cols_to_check_gha = [\"Col1\", \"Col2\", \"Col3\"]  # Replace with actual column names\n",
-    "cols_to_check_open_pos = [\"ColA\", \"ColB\"]  # Replace with actual column names\n",
+    "# Example usage:\n",
+    "if __name__ == \"__main__\":\n",
+    "    # Load master file\n",
+    "    master_df = pd.read_excel(\"master_file.xlsx\")\n",
     "\n",
-    "new_df, changes_df = process_mom_files(master_df, monthly_files, cols_to_check_gha, cols_to_check_open_pos)\n",
+    "    # List of monthly files with format [(month, file_path), ...]\n",
+    "    monthly_files = [\n",
+    "        (\"Jan 24\", \"jan_24_gha.xlsx\"),\n",
+    "        (\"Feb 24\", \"feb_24_gha.xlsx\"),\n",
+    "        (\"Mar 24\", \"mar_24_gha.xlsx\"),\n",
+    "        # Add more files as needed\n",
+    "    ]\n",
     "\n",
-    "# Save results\n",
-    "new_df.to_csv(\"new_records.csv\", index=False)\n",
-    "changes_df.to_csv(\"changed_records.csv\", index=False)\n"
+    "    # Columns to check for GHA and Open Position files\n",
+    "    cols_to_check_gha = [\"BF Level 3\", \"BF Level 4\", \"Cost Center\"]\n",
+    "    cols_to_check_open_pos = [\"Position Name\", \"Job Level\"]\n",
+    "\n",
+    "    # Process the files\n",
+    "    new_df, changes_df = process_monthly_files(master_df, monthly_files, cols_to_check_gha, cols_to_check_open_pos)\n",
+    "\n",
+    "    # Save results\n",
+    "    new_df.to_excel(\"new_records.xlsx\", index=False)\n",
+    "    changes_df.to_excel(\"changed_records.xlsx\", index=False)\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "899fcbdf",
+   "id": "ed119c7c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -206,7 +216,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2d18fba9",
+   "id": "9d0573bb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -284,7 +294,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e2a2d5e9",
+   "id": "a52c161c",
    "metadata": {},
    "outputs": [],
    "source": [
