--- a/MasterFile.ipynb
+++ b/MasterFile.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "877cc95d",
+   "id": "8c539955",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,7 +142,146 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ed119c7c",
+   "id": "101267fe",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "def standardize_ids(df):\n",
+    "    \"\"\"\n",
+    "    Standardize 'Position ID' and 'Emp`loyee ID' columns.\n",
+    "    Removes extra decimal points, leading/trailing spaces, \n",
+    "    and converts IDs to string format with uniform length.\n",
+    "    \"\"\"\n",
+    "    if \"Position ID\" in df.columns:\n",
+    "        df[\"Position ID\"] = df[\"Position ID\"].astype(str).str.split('.').str[0].str.strip()\n",
+    "    if \"Employee ID\" in df.columns:\n",
+    "        df[\"Employee ID\"] = df[\"Employee ID\"].astype(str).str.split('.').str[0].str.strip()\n",
+    "    return df\n",
+    "\n",
+    "def find_new_records(file_df, master_df, month, source):\n",
+    "    \"\"\"\n",
+    "    Find new records in the current month's file compared to the master dataframe.\n",
+    "    \"\"\"\n",
+    "    # Standardize IDs for comparison\n",
+    "    file_df = standardize_ids(file_df)\n",
+    "    master_df = standardize_ids(master_df)\n",
+    "\n",
+    "    # Add missing columns to file_df to match master_df\n",
+    "    for col in master_df.columns:\n",
+    "        if col not in file_df.columns:\n",
+    "            file_df[col] = \"\"\n",
+    "\n",
+    "    # Drop columns not in master_df\n",
+    "    file_df = file_df[master_df.columns]\n",
+    "\n",
+    "    # Identify new records (not in master_df)\n",
+    "    new_records = file_df[~file_df[\"Position ID\"].isin(master_df[\"Position ID\"])]\n",
+    "    new_records[\"Month Added\"] = month\n",
+    "    new_records[\"Source\"] = source\n",
+    "\n",
+    "    # Ensure new_records matches the structure of new_df\n",
+    "    new_records = new_records.reindex(columns=master_df.columns.tolist() + [\"Month Added\", \"Source\"], fill_value=\"\")\n",
+    "\n",
+    "    return new_records\n",
+    "\n",
+    "def find_changed_records(current_df, next_df, cols_to_check, month, source):\n",
+    "    \"\"\"\n",
+    "    Find records with changes in the next month's file compared to the current month's file.\n",
+    "    \"\"\"\n",
+    "    # Standardize IDs for comparison\n",
+    "    current_df = standardize_ids(current_df)\n",
+    "    next_df = standardize_ids(next_df)\n",
+    "\n",
+    "    # Merge both dataframes on 'Position ID' and 'Employee ID' for comparison\n",
+    "    merged = pd.merge(current_df, next_df, on=[\"Position ID\", \"Employee ID\"], suffixes=(\"_current\", \"_next\"), how=\"inner\")\n",
+    "\n",
+    "    changed_records = []\n",
+    "    for _, row in merged.iterrows():\n",
+    "        changed_cols = [\n",
+    "            col for col in cols_to_check\n",
+    "            if row[f\"{col}_current\"] != row[f\"{col}_next\"]\n",
+    "        ]\n",
+    "        if changed_cols:\n",
+    "            updated_row = row.to_dict()\n",
+    "            updated_row[\"Month Changed\"] = month\n",
+    "            updated_row[\"Source\"] = source\n",
+    "            updated_row[\"Cols Changed\"] = \", \".join(changed_cols)\n",
+    "            changed_records.append(updated_row)\n",
+    "\n",
+    "    # Convert changed records to a DataFrame\n",
+    "    if changed_records:\n",
+    "        changes_df = pd.DataFrame(changed_records)\n",
+    "        changes_df = changes_df.reindex(columns=current_df.columns.tolist() + [\"Month Changed\", \"Source\", \"Cols Changed\"], fill_value=\"\")\n",
+    "        return changes_df\n",
+    "    else:\n",
+    "        return pd.DataFrame(columns=current_df.columns.tolist() + [\"Month Changed\", \"Source\", \"Cols Changed\"])\n",
+    "\n",
+    "def process_monthly_files(master_df, monthly_files, cols_to_check_gha, cols_to_check_open_pos):\n",
+    "    \"\"\"\n",
+    "    Process monthly files to find new and changed records.\n",
+    "    \"\"\"\n",
+    "    new_df = pd.DataFrame(columns=master_df.columns.tolist() + [\"Month Added\", \"Source\"])\n",
+    "    changes_df = pd.DataFrame(columns=master_df.columns.tolist() + [\"Month Changed\", \"Source\", \"Cols Changed\"])\n",
+    "\n",
+    "    for i in range(len(monthly_files) - 1):\n",
+    "        current_month, current_file = monthly_files[i]\n",
+    "        next_month, next_file = monthly_files[i + 1]\n",
+    "\n",
+    "        # Process GHA files\n",
+    "        if \"gha\" in current_file.lower():\n",
+    "            current_df = pd.read_excel(current_file)\n",
+    "            next_df = pd.read_excel(next_file)\n",
+    "\n",
+    "            # Find new records\n",
+    "            new_df = pd.concat([new_df, find_new_records(current_df, master_df, current_month, \"GHA\")], ignore_index=True)\n",
+    "\n",
+    "            # Find changed records\n",
+    "            changes_df = pd.concat([changes_df, find_changed_records(current_df, next_df, cols_to_check_gha, next_month, \"GHA\")], ignore_index=True)\n",
+    "\n",
+    "        # Process Open Position files\n",
+    "        if \"open position\" in current_file.lower():\n",
+    "            current_df = pd.read_excel(current_file)\n",
+    "            next_df = pd.read_excel(next_file)\n",
+    "\n",
+    "            # Find new records\n",
+    "            new_df = pd.concat([new_df, find_new_records(current_df, master_df, current_month, \"Open Position\")], ignore_index=True)\n",
+    "\n",
+    "            # Find changed records\n",
+    "            changes_df = pd.concat([changes_df, find_changed_records(current_df, next_df, cols_to_check_open_pos, next_month, \"Open Position\")], ignore_index=True)\n",
+    "\n",
+    "    return new_df, changes_df\n",
+    "\n",
+    "# Example usage:\n",
+    "if __name__ == \"__main__\":\n",
+    "    # Load master file\n",
+    "    master_df = pd.read_excel(\"master_file.xlsx\")\n",
+    "\n",
+    "    # List of monthly files with format [(month, file_path), ...]\n",
+    "    monthly_files = [\n",
+    "        (\"Jan 24\", \"jan_24_gha.xlsx\"),\n",
+    "        (\"Feb 24\", \"feb_24_gha.xlsx\"),\n",
+    "        (\"Mar 24\", \"mar_24_gha.xlsx\"),\n",
+    "        # Add more files as needed\n",
+    "    ]\n",
+    "\n",
+    "    # Columns to check for GHA and Open Position files\n",
+    "    cols_to_check_gha = [\"BF Level 3\", \"BF Level 4\", \"Cost Center\"]\n",
+    "    cols_to_check_open_pos = [\"Position Name\", \"Job Level\"]\n",
+    "\n",
+    "    # Process the files\n",
+    "    new_df, changes_df = process_monthly_files(master_df, monthly_files, cols_to_check_gha, cols_to_check_open_pos)\n",
+    "\n",
+    "    # Save results\n",
+    "    new_df.to_excel(\"new_records.xlsx\", index=False)\n",
+    "    changes_df.to_excel(\"changed_records.xlsx\", index=False)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a02c11a0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -216,7 +355,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9d0573bb",
+   "id": "9066c26f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -294,7 +433,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a52c161c",
+   "id": "f9fc9954",
    "metadata": {},
    "outputs": [],
    "source": [
