--- a/MasterFile.ipynb
+++ b/MasterFile.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8c539955",
+   "id": "84e6dbe8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,40 +79,76 @@
     "    else:\n",
     "        return pd.DataFrame(columns=current_df.columns.tolist() + [\"Month Changed\", \"Source\", \"Cols Changed\"])\n",
     "\n",
-    "def process_monthly_files(master_df, monthly_files, cols_to_check_gha, cols_to_check_open_pos):\n",
+    "def process_monthly_files_dict(master_df, monthly_files, cols_to_check_gha, cols_to_check_open_pos):\n",
     "    \"\"\"\n",
     "    Process monthly files to find new and changed records.\n",
+    "    Handles 'monthly_files' as a dictionary.\n",
     "    \"\"\"\n",
     "    new_df = pd.DataFrame(columns=master_df.columns.tolist() + [\"Month Added\", \"Source\"])\n",
     "    changes_df = pd.DataFrame(columns=master_df.columns.tolist() + [\"Month Changed\", \"Source\", \"Cols Changed\"])\n",
     "\n",
-    "    for i in range(len(monthly_files) - 1):\n",
-    "        current_month, current_file = monthly_files[i]\n",
-    "        next_month, next_file = monthly_files[i + 1]\n",
+    "    months = list(monthly_files.keys())\n",
+    "\n",
+    "    for i in range(len(months) - 1):\n",
+    "        current_month = months[i]\n",
+    "        next_month = months[i + 1]\n",
+    "\n",
+    "        current_files = monthly_files[current_month]\n",
+    "        next_files = monthly_files[next_month]\n",
     "\n",
     "        # Process GHA files\n",
-    "        if \"gha\" in current_file.lower():\n",
-    "            current_df = pd.read_excel(current_file)\n",
-    "            next_df = pd.read_excel(next_file)\n",
+    "        current_gha_file = current_files[0]\n",
+    "        next_gha_file = next_files[0]\n",
+    "\n",
+    "        if current_gha_file and next_gha_file:\n",
+    "            current_gha_df = pd.read_excel(current_gha_file)\n",
+    "            next_gha_df = pd.read_excel(next_gha_file)\n",
     "\n",
     "            # Find new records\n",
-    "            new_df = pd.concat([new_df, find_new_records(current_df, master_df, current_month, \"GHA\")], ignore_index=True)\n",
+    "            new_df = pd.concat([new_df, find_new_records(current_gha_df, master_df, current_month, \"GHA\")], ignore_index=True)\n",
     "\n",
     "            # Find changed records\n",
-    "            changes_df = pd.concat([changes_df, find_changed_records(current_df, next_df, cols_to_check_gha, next_month, \"GHA\")], ignore_index=True)\n",
+    "            changes_df = pd.concat([changes_df, find_changed_records(current_gha_df, next_gha_df, cols_to_check_gha, next_month, \"GHA\")], ignore_index=True)\n",
     "\n",
     "        # Process Open Position files\n",
-    "        if \"open position\" in current_file.lower():\n",
-    "            current_df = pd.read_excel(current_file)\n",
-    "            next_df = pd.read_excel(next_file)\n",
+    "        current_open_pos_file = current_files[1]\n",
+    "        next_open_pos_file = next_files[1]\n",
+    "\n",
+    "        if current_open_pos_file and next_open_pos_file:\n",
+    "            current_open_pos_df = pd.read_excel(current_open_pos_file)\n",
+    "            next_open_pos_df = pd.read_excel(next_open_pos_file)\n",
     "\n",
     "            # Find new records\n",
-    "            new_df = pd.concat([new_df, find_new_records(current_df, master_df, current_month, \"Open Position\")], ignore_index=True)\n",
+    "            new_df = pd.concat([new_df, find_new_records(current_open_pos_df, master_df, current_month, \"Open Position\")], ignore_index=True)\n",
     "\n",
     "            # Find changed records\n",
-    "            changes_df = pd.concat([changes_df, find_changed_records(current_df, next_df, cols_to_check_open_pos, next_month, \"Open Position\")], ignore_index=True)\n",
+    "            changes_df = pd.concat([changes_df, find_changed_records(current_open_pos_df, next_open_pos_df, cols_to_check_open_pos, next_month, \"Open Position\")], ignore_index=True)\n",
     "\n",
     "    return new_df, changes_df\n",
+    "\n",
+    "# Example usage:\n",
+    "if __name__ == \"__main__\":\n",
+    "    # Load master file\n",
+    "    master_df = pd.read_excel(\"master_file.xlsx\")\n",
+    "\n",
+    "    # Dictionary of monthly files with format: {month: (gha_file, open_pos_file)}\n",
+    "    monthly_files = {\n",
+    "        \"Jan 24\": (\"gha_jan.xlsx\", \"open_pos_jan.xlsx\"),\n",
+    "        \"Feb 24\": (\"gha_feb.xlsx\", \"open_pos_feb.xlsx\"),\n",
+    "        \"Mar 24\": (\"gha_mar.xlsx\", \"open_pos_mar.xlsx\"),\n",
+    "        # Add more entries as needed\n",
+    "    }\n",
+    "\n",
+    "    # Columns to check for GHA and Open Position files\n",
+    "    cols_to_check_gha = [\"BF Level 3\", \"BF Level 4\", \"Cost Center\"]\n",
+    "    cols_to_check_open_pos = [\"Position Name\", \"Job Level\"]\n",
+    "\n",
+    "    # Process the files\n",
+    "    new_df, changes_df = process_monthly_files_dict(master_df, monthly_files, cols_to_check_gha, cols_to_check_open_pos)\n",
+    "\n",
+    "    # Save results\n",
+    "    new_df.to_excel(\"new_records.xlsx\", index=False)\n",
+    "    changes_df.to_excel(\"changed_records.xlsx\", index=False)\n",
     "\n",
     "# Example usage:\n",
     "if __name__ == \"__main__\":\n",
@@ -142,7 +178,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "101267fe",
+   "id": "55c1a78b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -281,7 +317,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a02c11a0",
+   "id": "c5e89e34",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -355,7 +391,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9066c26f",
+   "id": "e0aa41c0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -433,7 +469,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f9fc9954",
+   "id": "3644dc8f",
    "metadata": {},
    "outputs": [],
    "source": [
